// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should render 1`] = `
<div>
  <input
    class="sc-AxjAm iMGQdA"
    color="success"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a danger color 1`] = `
<div>
  <input
    class="sc-AxjAm gSwnFs"
    color="danger"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a primary color 1`] = `
<div>
  <input
    class="sc-AxjAm htWeVn"
    color="primary"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a success color 1`] = `
<div>
  <input
    class="sc-AxjAm iMGQdA"
    color="success"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a warning color 1`] = `
<div>
  <input
    class="sc-AxjAm kJzzDR"
    color="warning"
    type="radio"
  />
</div>
`;
